--- a/app/client/index.html
+++ b/app/client/index.html
@@ -38,6 +38,11 @@ body     {background-color: black; color: white;}
 <script src="/socket.io/socket.io.js"></script>
 <script>
   var socket = io.connect('http://192.168.1.181:8080/');
+  
+  socket.on('connect', function () {
+    socket.emit('subscribe', { camera: '01' });
+    socket.emit('subscribe', { camera: '02' });
+  });
 
   socket.on('image01', function(data) {
     $('#cam01 img').attr('src', data.jpg);
